--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "22"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1"
   }
